--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "^6.7.1",
     "dotenv": "^16.0.3",
     "fast-json-stringify": "^5.7.0",
     "fastify": "^4.16.3",
