--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "nodemon --exec 'node --inspect-brk=0.0.0.0:9229 --require ts-node/register src/app.ts'",
     "dev": "nodemon src/app.ts",
     "service": "ts-node src/app.ts"
   },
@@ -16,14 +16,20 @@
     "dotenv": "^16.0.3",
     "fast-json-stringify": "^5.7.0",
     "fastify": "^4.16.3",
+    "fastify-plugin": "^4.5.0",
     "koa": "^2.14.2",
     "mysql2": "^3.2.4",
     "nodemailer": "^6.9.1",
     "pino": "^8.11.0",
-    "redis": "^4.6.6"
+    "redis": "^4.6.6",
+    "split2": "^4.2.0",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
-    "@types/nodemailer": "^6.4.7"
+    "@types/nodemailer": "^6.4.7",
+    "@types/split2": "^4.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
